--- a/JavaLibs/.settings/org.eclipse.core.resources.prefs
+++ b/JavaLibs/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/lzm/redis/RedisHelper.java=UTF-8
+encoding//src/com/lzm/utils/PropertiesLoader.java=UTF-8
