--- a/JavaLibs/.settings/org.eclipse.core.resources.prefs
+++ b/JavaLibs/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,19 @@
 eclipse.preferences.version=1
+encoding//src/com/lzm/db/ConnectionFactory.java=UTF-8
+encoding//src/com/lzm/db/ConnectionTool.java=UTF-8
+encoding//src/com/lzm/db/DBUtil.java=UTF-8
+encoding//src/com/lzm/db/config/DBConfig.java=UTF-8
+encoding//src/com/lzm/db/config/PoolConfig.java=UTF-8
+encoding//src/com/lzm/memcache/MemcacheHelper.java=UTF-8
+encoding//src/com/lzm/netty/NettySocketServer.java=UTF-8
+encoding//src/com/lzm/netty/command/ICommand.java=UTF-8
+encoding//src/com/lzm/netty/decoder/BytesDecoder.java=UTF-8
+encoding//src/com/lzm/netty/decoder/BytesDecoder_Crossdomain.java=UTF-8
+encoding//src/com/lzm/netty/handler/IdleHandler.java=UTF-8
+encoding//src/com/lzm/netty/handler/ServerHandler.java=UTF-8
+encoding//src/com/lzm/netty/utils/Packet.java=UTF-8
 encoding//src/com/lzm/redis/RedisHelper.java=UTF-8
+encoding//src/com/lzm/redis/config/RedisConfig.java=UTF-8
+encoding//src/com/lzm/utils/LogError.java=UTF-8
 encoding//src/com/lzm/utils/PropertiesLoader.java=UTF-8
+encoding/<project>=UTF-8
