--- a/JavaLibs/.classpath
+++ b/JavaLibs/.classpath
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/commons-dbutils-1.5.jar"/>
 	<classpathentry kind="lib" path="libs/commons-pool-1.6.jar"/>
 	<classpathentry kind="lib" path="libs/fastjson-1.1.33.jar"/>
 	<classpathentry kind="lib" path="libs/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.26-bin.jar"/>
-	<classpathentry kind="lib" path="libs/netty-all-4.0.9.Final.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.5.6.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.5.6.jar"/>
 	<classpathentry kind="lib" path="libs/xmemcached-1.4.1.jar"/>
 	<classpathentry kind="lib" path="libs/jedis-2.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/asynchttpclient-netty.jar"/>
+	<classpathentry kind="lib" path="libs/netty-all-4.0.10.Final.jar"/>
+	<classpathentry kind="lib" path="libs/javassist-3.18.1-GA.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
