--- a/JavaLibs/bin/log4j.properties
+++ b/JavaLibs/bin/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootCategory=INFO, c
 log4j.appender.c = org.apache.log4j.ConsoleAppender
 log4j.appender.c.Target = System.out
 log4j.appender.c.layout = org.apache.log4j.PatternLayout
-log4j.appender.f.Threshold = INFO
+log4j.appender.c.Threshold = INFO
 log4j.appender.c.layout.ConversionPattern =  %-d{yyyy-MM-dd HH:mm:ss} %-5p %l - %m%n
 
 #log4j.rootCategory=INFO, f
