增加一个文件最大Size限制

--- a/JavaLibs/.classpath
+++ b/JavaLibs/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry kind="lib" path="libs/javassist-3.18.1-GA.jar"/>
 	<classpathentry kind="lib" path="libs/jedis.jar"/>
 	<classpathentry kind="lib" path="libs/asyncHttpClient-netty-1.8.9.jar"/>
-	<classpathentry kind="lib" path="libs/netty-all-4.0.21.Final.jar"/>
+	<classpathentry kind="lib" path="libs/netty-all-4.0.21.Final.jar" sourcepath="/Users/lingjing/java/code/netty/netty-4.0.21.Final/jar/all-in-one/netty-all-4.0.21.Final-sources.jar"/>
 	<classpathentry kind="lib" path="libs/disruptor-3.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
