--- a/JavaLibs/bin/tmp_log4j.properties
+++ b/JavaLibs/bin/tmp_log4j.properties
@@ -8,6 +8,7 @@ log4j.appender.c.layout.ConversionPattern =  %-d{yyyy-MM-dd HH:mm:ss} %-5p %l - 
 #log4j.rootCategory=INFO, f
 #log4j.appender.f = org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.f.File = logs/log.log
+#log4j.appender.f.MaxFileSize = 1024KB
 #log4j.appender.f.Append = true
 #log4j.appender.f.Threshold = INFO
 #log4j.appender.f.layout = org.apache.log4j.PatternLayout
